Crash using factor input on color mix node. #36248

Closed
opened 2013-07-22 13:44:33 +02:00 by mik arieta · 4 comments

%%%--- Operating System, Graphics card ---
Windows 7 64 bit, gtx660

- Blender version with error, and version that worked ---

Error tested on 2.68, partially tested on 2.67b.
Version that worked: i have tested only on those 2 releases.

- Short description of error ---

Blender crashes when i have mix color node with connected at least one image input and factor input, then i change the mix mode to ( one of the following): subtract,divide, difference, darken, lighten, overlay, dodge, burn, soft light, linear light.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. In Blender, open any file( also default cube scene is ok)
  2. render the scene in BI or cycles
  3. in node editor window go to compositing node, then use nodes.
    4 in the middle of the default input(render layers) and output(composite) insert a color/ mix node.
    5 in the factor socket attach a output from the render layers input( not the image, but at example alpha, z, mist pass...)
    6 change type of mixing to one of the list written up.
    7 Blender crash.

%%%

%%%--- Operating System, Graphics card --- Windows 7 64 bit, gtx660 - Blender version with error, and version that worked --- Error tested on 2.68, partially tested on 2.67b. Version that worked: i have tested only on those 2 releases. - Short description of error --- Blender crashes when i have mix color node with connected at least one image input and factor input, then i change the mix mode to ( one of the following): subtract,divide, difference, darken, lighten, overlay, dodge, burn, soft light, linear light. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. In Blender, open any file( also default cube scene is ok) 2. render the scene in BI or cycles 3. in node editor window go to compositing node, then use nodes. 4 in the middle of the default input(render layers) and output(composite) insert a color/ mix node. 5 in the factor socket attach a output from the render layers input( not the image, but at example alpha, z, mist pass...) 6 change type of mixing to one of the list written up. 7 Blender crash. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%No crash for me on Linux:
Blender 2.68
Opensuse 12.3/64
Intel I 965 Mesa driver.

Blender 2.68
Opensuse 12.3
GTX 550Ti 320.19

Cheers, mib.
%%%

%%%No crash for me on Linux: Blender 2.68 Opensuse 12.3/64 Intel I 965 Mesa driver. Blender 2.68 Opensuse 12.3 GTX 550Ti 320.19 Cheers, mib. %%%

%%%fixed r58512.%%%

%%%fixed r58512.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36248
No description provided.