fix [#36248] Crash using factor input on color mix node.